# SVMSLicer

./: CMakeLists.txt
SVMClassifier/: CMakeLists.txt  SVMClassifier.py
SVMClassifier/Resources/UI/: SVMClassifier.ui
background_classifier/: CMakeLists.txt  background_classifier.py  background_classifier.xml
